First controller and Razor pages tests

--- a/SalessWebMvc/Views/Home/Privacy.cshtml
+++ b/SalessWebMvc/Views/Home/Privacy.cshtml
@@ -3,4 +3,10 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>@ViewData["Message"]</p>
+
+<p>@ViewData["Email"]</p>
+
+<address>
+    <strong>More Info: </strong> <a href="www.google.com.br">Google.com.br</a>
+</address>
